# kronii

./: .gitignore  Cargo.toml  README.md  jobs.yaml.example  scheduler.db  scheduler.db.example
src/: config.rs  db.rs  job.rs  lock.rs  main.rs  metrics.rs  scheduler.rs  state.rs  worker.rs
