[package]
name = "kronii"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
prometheus = "0.14"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
cron = "0.15"
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
] }
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
